--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doichain",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A js-Doichain library. The goal is to fully cover the Doichain protocoll",
   "main": "index.js",
   "scripts": {
@@ -13,13 +13,11 @@
   "keywords": [
     "Doichain",
     "blockchain",
-    "double",
-    "opt",
-    "ins",
+    "double-opt-in",
     "DOI",
     "Doicoin",
-    "Email",
-    "marketing"
+    "Email marketing",
+    "Email"
   ],
   "author": "Nico Krause",
   "license": "MIT",
