--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "doichain",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A js-Doichain library. The goal is to fully cover the Doichain protocoll",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "test": "mocha --require @babel/register"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,13 @@
   "bugs": {
     "url": "https://github.com/Doichain/js-doichain/issues"
   },
-  "homepage": "https://github.com/Doichain/js-doichain#readme"
+  "homepage": "https://github.com/Doichain/js-doichain#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/register": "^7.8.6",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.0"
+  }
 }
