added bip39 library to create mnemonic and added test

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "@babel/register": "^7.8.6",
     "chai": "^4.2.0",
     "mocha": "^7.1.0"
+  },
+  "dependencies": {
+    "bip39": "^3.0.2"
   }
 }
