--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A js-Doichain library. The goal is to fully cover the Doichain protocoll",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require @babel/register"
+    "test": "mocha --watch --require @babel/register"
   },
   "repository": {
     "type": "git",
