--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "doichain",
   "version": "0.0.20",
-  "description": "A js-Doichain library. The goal is to fully cover the Doichain protocoll",
+  "description": "A js-Doichain library. The goal is to fully cover the Doichain protocol",
   "main": "index.js",
   "scripts": {
     "test": "mocha --watch --require @babel/register"
