--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doichain",
-  "version": "0.0.35",
+  "version": "0.0.36",
   "description": "A js-Doichain library. The goal is to fully cover the Doichain protocol",
   "main": "index.js",
   "scripts": {
@@ -36,6 +36,7 @@
   "dependencies": {
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "^5.1.8",
+    "browser-crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "hdkey": "^1.1.1",
     "node-fetch": "^2.6.0",
