--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doichain",
-  "version": "0.0.39",
+  "version": "0.0.40",
   "description": "A js-Doichain library. The goal is to fully cover the Doichain protocol",
   "main": "index.js",
   "scripts": {
@@ -40,6 +40,7 @@
     "browser-crypto": "^1.0.1",
     "bs58": "^4.0.1",
     "crypto-js": "^4.0.0",
+    "eciesjs": "^0.3.6",
     "hdkey": "^1.1.1",
     "node-fetch": "^2.6.0",
     "satoshi-bitcoin": "^1.0.4",
