--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doichain",
-  "version": "0.0.40",
+  "version": "0.0.41,
   "description": "A js-Doichain library. The goal is to fully cover the Doichain protocol",
   "main": "index.js",
   "scripts": {
@@ -37,6 +37,7 @@
     "binstring": "^0.2.1",
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "^5.1.8",
+    "bitcoinjs-message": "^2.1.0",
     "browser-crypto": "^1.0.1",
     "bs58": "^4.0.1",
     "crypto-js": "^4.0.0",
