--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mocha": "^7.1.1"
   },
   "dependencies": {
+    "@codewarriorr/electrum-client-js": "^0.1.1",
     "binstring": "^0.2.1",
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "^5.1.8",
@@ -42,6 +43,7 @@
     "bs58": "^4.0.1",
     "crypto-js": "^4.0.0",
     "eciesjs": "^0.3.6",
+    "electrum-mnemonic": "^2.0.0",
     "hdkey": "^1.1.1",
     "node-fetch": "^2.6.0",
     "satoshi-bitcoin": "^1.0.4",
